force-app/main/default/objects/Contact/fields/AccountIdMatch__c.field-meta.xml
<CustomField>
    <fullName>AccountIdMatch__c</fullName>
    <description>To enable duplicate matching on the Account Id of the Contact to prevent the same person being created as a Contact more than once on the same account.</description>
    <label>Account Id Match</label>
    <length>18</length>
    <type>Text</type>
</CustomField>