force-app/main/default/objects/Contact/fields/Active_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Active_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set to true if Contact is also an active community user.</description>
    <label>Active Portal User</label>
    <type>Checkbox</type>
</CustomField>