force-app/main/default/objects/Contact/fields/Contact_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_2__c</fullName>
    <description>Case insensitive ID that can be used in Excel reports</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID 2</label>
    <type>Text</type>
</CustomField>