force-app/main/default/objects/Contact/fields/Drift_Information__c.field-meta.xml
<CustomField>
    <fullName>Drift_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to show which contact person is the operations and maintenance contact in the company</description>
    <inlineHelpText>Check this if the contact should be a drift information contact</inlineHelpText>
    <label>Drift Information</label>
    <type>Checkbox</type>
</CustomField>