force-app/main/default/objects/Contact/fields/Email_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Email_ReadOnly__c</fullName>
    <description>A text version of the email. Used for displaying the email in the activation email in the activation app</description>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>