force-app/main/default/objects/Contact/fields/Email_Text_Only__c.field-meta.xml
<CustomField>
    <fullName>Email_Text_Only__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>