force-app/main/default/objects/Contact/fields/Entitlement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is set manually when enttilement contact is defined through contract</description>
    <inlineHelpText>Contact which are entitled to customer service (telefoni ansvarlig)</inlineHelpText>
    <label>Entitlement Contact</label>
    <type>Checkbox</type>
</CustomField>