force-app/main/default/objects/Contact/fields/jrsl_ul_Unsubscribe_Link_Contact__c.field-meta.xml
<CustomField>
    <fullName>jrsl_ul_Unsubscribe_Link_Contact__c</fullName>
    <description>This field comes with the unmanaged package &quot;Unsubscribe Link&quot; from the AppExchange. More info embedded in formula.</description>
    <formula>/* This field comes with the unmanaged package &quot;Unsubscribe Link&quot; from the AppExchange.*/
/* INSTRUCTIONS: For this formula to work, you need to create a record for the custom metadata type Unsubscribe Link */
/* Fill in the field SiteDomain with the domain of your Salesforce Site used for this purpose. */
/* You can optionally fill in the field Our Organization which will replace &quot;our organization&quot; in the formula results with the name of your org. */
/*What the formula is doing:*//* Create a hyperlink of SiteDomain from the custom metadata record*/

HYPERLINK((&quot;https://&quot;+$CustomMetadata.jrsl_ul_Unsubscribe_Link__mdt.Unsubscribe.jrsl_ul_Site_Domain__c

/* append the visualforce page &quot;Unsubscribe&quot; and the recordId of this record and the email address.*/
/* the unsubscribe link flow uses these variables to find the right records.*/

+&quot;/Unsubscribe?recordId=&quot;+ CASESAFEID(Id) +&quot;&amp;Email=&quot; +

/*some email addresses have plus signs in them, which need to be substituted for %2B to work in links.*/

(SUBSTITUTE(Email,&quot;+&quot;,&quot;%2B&quot;))), &quot;Click here to unsubscribe from all email from &quot; +

/* Look up the custom metadata type record to find a replacement for &quot;our organization&quot; if it exists.*/

(IF(ISBLANK($CustomMetadata.jrsl_ul_Unsubscribe_Link__mdt.Unsubscribe.jrsl_ul_Our_Organization__c),&quot;our organization&quot;,$CustomMetadata.jrsl_ul_Unsubscribe_Link__mdt.Unsubscribe.jrsl_ul_Our_Organization__c) + &quot;.&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Works with unmanaged package Unsubscribe Link. Insert formula in email templates.</inlineHelpText>
    <label>Unsubscribe Link Contact</label>
    <type>Text</type>
</CustomField>