force-app/main/default/objects/Contact/fields/My_Telia_Superadmin__c.field-meta.xml
<CustomField>
    <fullName>My_Telia_Superadmin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to show which contact person who shall receive links to &quot;Mit Telia Erhverv&quot;.</description>
    <inlineHelpText>Check this if the contact should be Superadmin and receive link to &quot;Mit Telia Erhverv&quot;.</inlineHelpText>
    <label>&quot;Mit Telia&quot; Superadmin</label>
    <type>Checkbox</type>
</CustomField>