force-app/main/default/objects/Contact/fields/Name_Mobile_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_Mobile_Account__c</fullName>
    <formula>FirstName + &quot; &quot; + LastName + &quot;, Mobile: &quot; +  MobilePhone + &quot;, Account: &quot; + Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Mobile Account</label>
    <type>Text</type>
</CustomField>