force-app/main/default/objects/Contact/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>The notes about the contact for quick check</description>
    <inlineHelpText>The notes about the contact for quick check</inlineHelpText>
    <label>Note</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>