force-app/main/default/objects/Contact/fields/NPS_contact__c.field-meta.xml
<CustomField>
    <fullName>NPS_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Story ID: 15</description>
    <inlineHelpText>Check this if the contact should be included when we do NPS (Net Promoter Score) surveys.</inlineHelpText>
    <label>NPS contact</label>
    <type>Checkbox</type>
</CustomField>