force-app/main/default/objects/Contact/fields/Primary_account_contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_account_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Story ID: 15</description>
    <inlineHelpText>Check this box if the contact is Telia&apos;s primary contact with this account</inlineHelpText>
    <label>Primary account contact</label>
    <type>Checkbox</type>
</CustomField>