force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>User Story ID: 15</description>
    <inlineHelpText>Decisionmaker: Contract responsible
Technical Buyer: IT- and/or logistics
Business User: Receptionist or user
Executive Sponsor: C-level person
Influencer: Anybody with an opinion 
Other: If the person doesn&apos;t fit anywhere else</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decisionmaker</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
            <value>
                <fullName>Business User</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>