force-app/main/default/objects/Contact/fields/Same_Owner_as_Account__c.field-meta.xml
<CustomField>
    <fullName>Same_Owner_as_Account__c</fullName>
    <description>Checks if the Contact Owner is the same as the Account Owner.</description>
    <formula>OwnerId =  Account.Owner.Id</formula>
    <inlineHelpText>Checks if the Contact Owner is the same as the Account Owner.</inlineHelpText>
    <label>Same Owner as Account</label>
    <type>Checkbox</type>
</CustomField>