force-app/main/default/objects/Contact/fields/Transfer_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Responsible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The robot will be using this field to check if the case can be transfered</description>
    <inlineHelpText>The robot will be using this field to check if the case can be transfered</inlineHelpText>
    <label>Transfer Responsible</label>
    <type>Checkbox</type>
</CustomField>