force-app/main/default/objects/Contact/fields/UC_Admin__c.field-meta.xml
<CustomField>
    <fullName>UC_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to mark the contact as Touchpoint administrator</description>
    <inlineHelpText>Touchpoint administrator</inlineHelpText>
    <label>UC Admin</label>
    <type>Checkbox</type>
</CustomField>