force-app/main/default/objects/Contact/validationRules/Email_OR_phone_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_OR_phone_required</fullName>
    <active>true</active>
    <description>User Story ID: 15 Create Contact
Either Email or phone number must be entered. Phone number can be either phone or mobile</description>
    <errorConditionFormula>ISBLANK( Email )  &amp;&amp;  (ISBLANK( Phone )  &amp;&amp; ISBLANK( MobilePhone ))</errorConditionFormula>
    <errorMessage>Email or phone/mobile is required</errorMessage>
</ValidationRule>