force-app/main/default/objects/Contact/validationRules/First_Name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_required</fullName>
    <active>true</active>
    <description>User Story ID: 15 + 19
First Name is a required field</description>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter a First Name</errorMessage>
</ValidationRule>