force-app/main/default/objects/Contact/validationRules/UC_Admin_needs_to_be_Entitled.validationRule-meta.xml
<ValidationRule>
    <fullName>UC_Admin_needs_to_be_Entitled</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Entitlement_Contact__c  = FALSE,
    UC_Admin__c  = TRUE
)</errorConditionFormula>
    <errorMessage>You can not set a Contact as UC Admin unless you mark them as Entitled first</errorMessage>
</ValidationRule>