force-app/main/default/objects/Contact/listViews/ACE_Admin_Intern.listView-meta.xml
<ListView>
    <fullName>ACE_Admin_Intern</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>johbaa@norlys.dk,hethoe@norlys.dk,lardal@norlys.dk</value>
    </filters>
    <label>ACE Admin (Intern)</label>
</ListView>