force-app/main/default/objects/Contact/listViews/Copy_of_Udsendelse_af_kommunikation_til_kunder.listView-meta.xml
<ListView>
    <fullName>Copy_of_Udsendelse_af_kommunikation_til_kunder</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_ReadOnly__c</field>
        <operation>contains</operation>
        <value>lars.dall@teliacompany.com</value>
    </filters>
    <label>ACE Drift 25 maj 2025</label>
</ListView>