force-app/main/default/objects/Contact/listViews/My_Active_Portal_User_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Active_Portal_User_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Note__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active_Portal_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Active Portal User Contacts</label>
</ListView>