force-app/main/default/objects/Contact/listViews/Test_ACE_Admin.listView-meta.xml
<ListView>
    <fullName>Test_ACE_Admin</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Test ACE Admin</label>
</ListView>