force-app/main/default/objects/Contact/listViews/test_lars_dall.listView-meta.xml
<ListView>
    <fullName>test_lars_dall</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UC_Admin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>ace internal maillist</value>
    </filters>
    <label>test lars dall</label>
</ListView>