force-app/main/default/objects/Contact/listViews/Udsendelse_af_kommunikation_til_kunder.listView-meta.xml
<ListView>
    <fullName>Udsendelse_af_kommunikation_til_kunder</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Udsendelse af kommunikation til kunder</label>
</ListView>