force-app/main/default/objects/Contact/listViews/X2025_08_18_ACE_C_update_31_d_27_08_2025.listView-meta.xml
<ListView>
    <fullName>X2025_08_18_ACE_C_update_31_d_27_08_2025</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>thomne@norlys.dk,thofri@norlys.dk,rakela@norlys.dk,petser@norlys.dk,allnes@norlys.dk,nicwah@norlys.dk,lardal@norlys.dk,lokben@norlys.dk,technicalsupportmobileb2b@norlys.dk,dabrpe@norlys.dk,bribor@norlys.dk,trikro@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>paenje@norlys.dk,hatsae@norlys.dk,vicdix@norlys.dk,sales-support@norlys.dk,dastor@norlys.dk,cladam@norlys.dk,hethoe@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>jesbur@norlys.dk,cecroe@norlys.dk,jorpri@norlys.dk,petesb@norlys.dk,danall@norlys.dk,roband@norlys.dk,denabd@norlys.dk,mortne@norlys.dk,anthom@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>salemi@norlys.dk,jesols@norlys.dk,jesppo@norlys.dk,jacjul@norlys.dk,josean@norlys.dk,dorhyn@norlys.dk,sylpet@norlys.dk,sebnee@norlys.dk,belmad@norlys.dk,pialar@norlys.dk,lenaha@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>emiboi@norlys.dk,marcan@norlys.dk,davfry@norlys.dk,jsk@al2bolig.dk,kaa@abesbjerg.dk,ltr@osterbo.dk,ama@europcar.dk,jw@bomidtvest.dk,mfr@fob.dk,egu@ken.dk,tst@ken.dk,john.lauridsen@scanglas.dk,jesper.haagensen@scanglas.dk</value>
    </filters>
    <label>2025-08-18 ACE C update 31 d 27-08-2025</label>
</ListView>