force-app/main/default/objects/Contact/listViews/X25_08_2025_ACE_nedetid_reminder_sendt.listView-meta.xml
<ListView>
    <fullName>X25_08_2025_ACE_nedetid_reminder_sendt</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR (9 AND 10)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>thofri@norlys.dk,thomne@norlys.dk,rakela@norlys.dk,petser@norlys.dk,allnes@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>nicwah@norlys.dk,lardal@norlys.dk,lokben@norlys.dk,technicalsupportmobileb2b@norlys.dk,dabrpe@norlys.dk,bribor@norlys.dk,trikro@norlys.dk,paenje@norlys.dk,hatsae@norlys.dk,vicdix@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>sales-support@norlys.dk,dastor@norlys.dk,cladam@norlys.dk,hethoe@norlys.dk,jesbur@norlys.dk,cecroe@norlys.dk,jorpri@norlys.dk,petesb@norlys.dk,danall@norlys.dk,roband@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>denabd@norlys.dk,mortne@norlys.dk,salemi@norlys.dk,anthom@norlys.dk,jesols@norlys.dk,jesppo@norlys.dk,jacjul@norlys.dk,sylpet@norlys.dk,josean@norlys.dk,dorhyn@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>sebnee@norlys.dk,belmad@norlys.dk,pialar@norlys.dk,lenaha@norlys.dk,emiboi@norlys.dk,marcan@norlys.dk,davfry@norlys.dk,jsk@al2bolig.dk,kaa@abesbjerg.dk,tobo@ase.dk,karb@ase.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>esha@ase.dk,renk@ase.dk,ltr@osterbo.dk,jw@bomidtvest.dk,mje@danishagro.dk,fkn@davidsen.as,jbkj@davidsen.as,ama@europcar.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>mfr@fob.dk,servicedesk@gfforsikring.dk,michael.matz@hk.dk,anders.barfoed@hk.dk,martin.jensen@hk.dk,hethoe@norlys.dk,johbaa@norlys.dk,lardal@norlys.dk,egu@ken.dk,tst@ken.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>asib@lb.dk,joho@lb.dk,rpo@rema1000.dk,john.lauridsen@scanglas.dk,jesper.haagensen@scanglas.dk,lars.dall@teliacompany.com,madkah@norlys.dk,jeedha@norlys.dk,matsoe@norlys.dk</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>,jzp@ao.dk,raw@ao.dk,stho@danishagro.dk</value>
    </filters>
    <filters>
        <field>UC_Admin__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>25.08.2025 ACE nedetid reminder sendt</label>
</ListView>